[add] Added filter by date: from newest to oldest
